--- a/index.html
+++ b/index.html
@@ -93,15 +93,29 @@
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
-                    <ul class="nav-links">
+                    <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#courses">Courses</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 Huzaifa Asif. All rights reserved.</p>
             </div>
         </div>
+
+        <script src="./js/script.js"></script>
     </footer>
 </body>
 
