--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </nav>
-    <section id="id" class="home">
+    <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
                 <h1 class="animate-pop-in">Learn From the best</h1>
@@ -50,7 +50,7 @@
     <section class="courses" id="courses">
         <div class="container">
             <h2 class="section-title">Feature Courses</h2>
-            <div class="course-filter">
+            <div class="course-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
                 <button class="filter-btn" data-filter="web">Web Development</button>
                 <button class="filter-btn" data-filter="mobile">Mobile Development</button>
