--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
                 <a href="#courses"><i class="fas fa-book"></i>Courses</a>
                 <a href="#add-courses"><i class="fas fa-plus-circle"></i>Add Courses</a>
                 <a href="#users"><i class="fas fa-users"></i>Users</a>
-                <a href="#view-site"><i class="fas fa-home"></i>View Site</a>
+                <a href="index.html"><i class="fas fa-home"></i>View Site</a>
             </nav>
         </aside>
         <main class="admin-main">
@@ -35,6 +35,7 @@
                 <div class="admin-user">
                     <i class="fas fa-bell"></i>
                     <i class="fas fa-user-circle"></i>
+                    <span>Admin</span>
                 </div>
             </header>
 
