--- a/course-detail.html
+++ b/course-detail.html
@@ -71,7 +71,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-primary btn btn-block">Pay Now</button>
-                        <p>This is a demo - no actuall payment will be processd</p>
+                        <p class="demo-note">This is a demo - no actuall payment will be processd</p>
                     </form>
                 </div>
             </div>
