--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <h2 class="section-title">Feature Courses</h2>
             <div class="course-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="web">Web Development</button>
-                <button class="filter-btn" data-filter="mobile">Mobile Development</button>
-                <button class="filter-btn" data-filter="data">Data Science</button>
+                <button class="filter-btn" data-filter="Web Development">Web Development</button>
+                <button class="filter-btn" data-filter="Marketing">Mobile Development</button>
+                <button class="filter-btn" data-filter="Data Science">Data Science</button>
             </div>
-            <div id="course-container" class="course-grid">
+            <div id="courseContainer" class="course-grid">
                 <!-- Course Will be loaded dynamically -->
             </div>
         </div>
