--- a/course-detail.html
+++ b/course-detail.html
@@ -51,7 +51,7 @@
                             <label for="cardNumber">Card Number</label>
                             <input type="text" id="cardNumber" placeholder="4232 4232 4232 4232" maxlength="19">
                         </div>
-                        <div class="form-rows">
+                        <div class="form-row">
                             <div class="form-group">
                                 <label for="expiryDate">Expiry Date</label>
                                 <input type="text" id="expiryDate" placeholder="MM/YY">
