--- a/course-detail.html
+++ b/course-detail.html
@@ -32,7 +32,7 @@
                 <!-- Course Details Will be loading here -->
             </div>
 
-            <div id="paymentModel" class="modal">
+            <div id="paymentModal" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Complete your Purchase</h2>
@@ -40,7 +40,7 @@
                         <i class="fas fa-info-circle"></i>
                         <p>Demo Payment Method - Use any fake details</p>
                     </div>
-                    <form action="" id="paymentforms" class="payment-form">
+                    <form  id="paymentForm" class="payment-form">
                         <div class="course-summary" id="courseSummary">
                             <!-- Course Summary will be display here -->
                         </div>
@@ -70,7 +70,7 @@
                             <input type="text" id="email" placeholder="your@example.com">
                         </div>
 
-                        <button type="submit" class="btn btn-primary btn btn-block">Pay Now</button>
+                        <button type="submit" id="payNowBtn" class="btn btn-primary btn-block">Pay Now</button>
                         <p class="demo-note">This is a demo - no actuall payment will be processd</p>
                     </form>
                 </div>
