--- a/admin.html
+++ b/admin.html
@@ -39,9 +39,9 @@
                 </div>
             </header>
 
-            <section id="add-courses" class="admin-section">
+            <section id="addCourses" class="admin-section">
                 <h2>Add New Courses</h2>
-                <form id="courseform" class="course-form">
+                <form id="courseForm" class="course-form">
                     <div class="form-group">
                         <label for="courseTitle">Course Title</label>
                         <input type="text" id="courseTitle" required>
@@ -53,15 +53,15 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="formprice">Price ($)</label>
-                            <input type="number" name="" id="formprice" min="0" step="0.01" required>
+                            <input type="number" name="" id="coursePrice" min="0" step="0.01" required>
                         </div>
                         <div class="form-group">
                             <label for="formcategory">Category</label>
-                            <select name="" id="formcategory" required>
+                            <select name="" id="courseCategory" required>
                                 <option value="">Select Category</option>
-                                <option value="web">Web Development</option>
-                                <option value="mobile">Mobile Development</option>
-                                <option value="data">Data Science</option>
+                                <option value="Web Development">Web Development</option>
+                                <option value="Marketing">Mobile Development</option>
+                                <option value="Data Science">Data Science</option>
                             </select>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         <textarea name="" id="courseContent" rows="6"
                             placeholder="[{'title':'Chapter 1', 'video': 'url'},{'title':'Chapter 2', 'video': 'url'}]"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Add Course</button>
+                    <button type="submit" id="courseForm" class="btn btn-primary">Add Course</button>
                 </form>
             </section>
 
